manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskapp-ingress
  namespace: taskapp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - taskapp.alphonzojonesjr.com
    secretName: taskapp-tls
  rules:
  - host: taskapp.alphonzojonesjr.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: taskapp-frontend
            port:
              number: 80
